# readable_code-cpp-build_system-modular_project_with_cmake

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md
1.basic_grammar/: CMakeLists.txt
1.basic_grammar/1.message/: CMakeLists.txt
1.basic_grammar/2.variables/: CMakeLists.txt
1.basic_grammar/3.control_statements/: CMakeLists.txt
1.basic_grammar/4.function/: CMakeLists.txt
1.basic_grammar/4.scoping/: CMakeLists.txt
1.basic_grammar/4.scoping/parent/child/: CMakeLists.txt
1.basic_grammar/5.file_system/: CMakeLists.txt
1.basic_grammar/5.scope/: CMakeLists.txt
1.basic_grammar/5.scope/parent/: CMakeLists.txt
1.basic_grammar/5.scope/parent/child/: CMakeLists.txt
1.basic_grammar/5.scoping/: CMakeLists.txt
1.basic_grammar/5.scoping/parent/: CMakeLists.txt
1.basic_grammar/5.scoping/parent/child/: CMakeLists.txt
1.basic_grammar/6.file_system/: CMakeLists.txt
1.basic_grammar/6.file_system/cmake/: example.cmake
1.basic_grammar/6.setting_cpp_project/: CMakeLists.txt
1.basic_grammar/6.setting_cpp_project/src/: printing_message.cpp
2.advanced_topics/: CMakeLists.txt
2.advanced_topics/1.pre_defined_global_variables/: CMakeLists.txt
2.advanced_topics/2.setting_cpp_project/: CMakeLists.txt
2.advanced_topics/2.setting_cpp_project/include/: utils.hpp
2.advanced_topics/2.setting_cpp_project/src/: utils.cpp
2.advanced_topics/3.external_dependencies/: CMakeLists.txt
2.advanced_topics/3.external_dependencies/src/: add_testing.cpp
2.advanced_topics/4.automation/: CMakeLists.txt
2.advanced_topics/4.automation/scripts/: external_script.sh
2.advanced_topics/4.automations/: CMakeLists.txt
3.best_practices-ultimate_project_structure/: CMakeLists.txt
3.best_practices-ultimate_project_structure/application/print_hello_world/: CMakeLists.txt
3.best_practices-ultimate_project_structure/application/print_hello_world/src/: main.cpp
3.best_practices-ultimate_project_structure/module/example/: CMakeLists.txt
3.best_practices-ultimate_project_structure/module/example/include/example/: utils.hpp
3.best_practices-ultimate_project_structure/module/example/test/unit/: CMakeLists.txt
3.best_practices-ultimate_project_structure/project_structure/: CMakeLists.txt
3.best_practices-ultimate_project_structure/project_structure/application/print_hello_world/: CMakeLists.txt
3.best_practices-ultimate_project_structure/project_structure/module/example/: CMakeLists.txt
3.best_practices-ultimate_project_structure/project_structure/module/example/test/unit/: CMakeLists.txt
basic_grammar/control_statements/: CMakeLists.txt
basic_grammar/message/: CMakeLists.txt
basic_grammar/variables/: CMakeLists.txt
basic_grammar/variables/parent/: CMakeLists.txt
basic_grammar/variables/parent/child/: CMakeLists.txt
example_project/: CMakeLists.txt
example_project/basic_project/: CMakeLists.txt
example_project/basic_project/cmake/: find_gtest.cmake  find_thirdparties.cmake
example_project/basic_project/module/example/: CMakeLists.txt
example_project/basic_project/module/example/test/: CMakeLists.txt
example_project/basic_project/module/example/test/unit/: CMakeLists.txt
example_project/basic_project/src/: main.cpp
