# Basic configurations
cmake_minimum_required(VERSION 3.11) # Minimum CMake version required
project(2.ADVANCED_TOPICS) # Required for CMake to know what project this is

message(STATUS "")
message(STATUS "Started all process in ${PROJECT_NAME} CMakeLists.txt.")

# add_subdirectory(1.pre_defined_global_variables)
# add_subdirectory(2.setting_cpp_project)
# add_subdirectory(3.external_dependencies)
# add_subdirectory(4.automations)
message(STATUS "Finished all process in ${PROJECT_NAME} CMakeLists.txt.")
message(STATUS "")
