message("\n")

set(STRING_VARIABLE 1)
message(STATUS "STRING_VARIABLE: ${STRING_VARIABLE}\n")

set(STRING_VARIABLES 1 2 3 4 5 6 7 8 9 10)
message(STATUS "STRING_VARIABLES: ${STRING_VARIABLES}\n")

set(BOOL_VARIABLE TRUE)
message(STATUS "BOOL_VARIABLE: ${BOOL_VARIABLE}\n")

set(BOOL_VARIABLES TRUE FALSE ON OFF YES NO 1 0)
message(STATUS "BOOL_VARIABLES: ${BOOL_VARIABLES}\n")

# add_subdirectory(parent)
# message(STATUS "On root: ${CHILD_STRING_VALIABLE}")
# message(STATUS "CHILD_STRING_VALIABLE: ${CHILD_STRING_VALIABLE}")
# message(STATUS "PARENT_STRING_VARIABLE: ${PARENT_STRING_VARIABLE}")
# message(STATUS "GLOBAL_STRING_VARIABLE: ${GLOBAL_STRING_VARIABLE}\n")
